# Mail_VerifyCode

./: README.md
mail/: Makefile  Makefile.am  Makefile.in  build.sh  config.h  config.h.in  config.status  configure  configure.ac
mail/autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
mail/code/: Makefile  Makefile.am  Makefile.in  TimerHeap.cpp  TimerHeap.h  main.cpp  sendmail.cpp  sendmail.h
mail/code/.deps/: TimerHeap.Po  main.Po  sendmail.Po
